<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PesqAlunos</class>
 <widget class="QDialog" name="PesqAlunos">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>509</width>
    <height>461</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Nome</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="edtNome"/>
   </item>
   <item>
    <widget class="QTableWidget" name="tableWidget"/>
   </item>
   <item>
    <widget class="QPushButton" name="btnConfirmar">
     <property name="text">
      <string>&amp;Confirmar</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="btnCancelar">
     <property name="text">
      <string>Cancela&amp;r</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
